Changes from jTDS 1.0.2
=======================

02/22/2005 - David Kilzer
 o Added .cvsignore to top-level directory to ignore build and dist directories.

02/19/2005 - Alin Sinpalean
 o Applied patch [1122494] SQL Server Authentication & Named pipes, submitted
   by Kartik Shah. On Windows, local named pipes are always used, now, even for
   remote servers.
 o Implemented feature request [1124636] Better error message for missing
   ntlmauth.dll.

02/17/2005 - Alin Sinpalean
 o Corrected a problem related to cancel synchronization in TdsCore: a race
   condition occured between the cancelPending assignments that could cause
   the Connection to fail. Problem was reproducible using testCancel0003() in
   SAfeTest on a slow client.
 o Corrected bug [1120168] jTDS 101 - TDS data type 0 invalid, caused by
   incomplete column info filled in for dummy CachedResultSets.

02/16/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1122357] INSERT is executed twice by scrollable
   Statement on Sybase. CachedResultSets are now created on top of plain
   ResultSets from scrollable/updateable Statements. The query is only altered
   (by adding "FOR BROWSE") if executed via executeQuery().

02/15/2005 - Alin Sinpalean
 o Altered SQLParser to accept any number of parameters for a PreparedStatement
   if prepareSql=0, i.e. plain queries rathern than RPC are used to execute the
   query. Also modified the related test to handle this situation.

02/14/2005 - Alin Sinpalean
 o Applied patch [1120010] Fixed search string escape handling, submitted by
   James P. Moring.
 o Corrected bug [1122481] how handle new behavior since 1.0.1. The DataSource
   factory failed with NPE because the properties are no longer initialized in
   the constructor. Added tests to ensure no regressions.

02/12/2005 - Alin Sinpalean
 o Corrected bug [1120442] Statement hangs in socket read after
   Statement.cancel().
 o Applied Mike's fix for bug [1120825] Can't open scrollable ResultSet with